--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,6 @@
 @import url('typo.css');
+@import url('general.css');
+@import url('main.css');
+@import url('footer.css');
+@import url('media-query.css');
+@import url('variables.css');
