--- a/css/general.css
+++ b/css/general.css
@@ -26,15 +26,19 @@ body{
 }
 img{
     width: 100%;
-    display: block;
 }
-.preference-list ul{
+nav ul{
     text-decoration-style: none;
     list-style: none;
+}
+.text-center{
+    text-align: center;
 }
 .flex-column{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+}
+.first-section, .second-section, .tird-section{
+    padding-bottom: 3rem;
 }
