--- a/css/footer.css
+++ b/css/footer.css
@@ -1,26 +1,38 @@
 footer{
     height: 5.625rem;
+    width: 100vw;
     background-color: var(--footer-color);
+    position: relative;
 }
 .footer-section , .footer-section .row{
     height: 100%;
     width: 100%;
 }
+.footer-section .row{
+    justify-content: space-between;
+}
 /* COL-LEFT */
 .footer-section .col-25{
-    width: 25%;
+    width: calc(100% / 4);
 }
+.footer-left > div {
+    padding-right: 1rem;
+}
+.col-25 .icon > div > *{
+   
+   padding-right: 0.5rem;
 
+}
 /* COL MIDDLE */
 .footer-icon{
     justify-content: center;
 }
 .footer-section .col-50{
-    width: 50%;
+    width: calc(100% / 2);
     justify-content: center;
     
 }
-.footer-icon, .footer-right, .footer-left  {
+.footer-icon, .footer-right, .footer-left, .col-25 .row {
     font-size: 1.5rem;
     padding: .625rem;
 }
@@ -30,15 +42,23 @@ footer{
 .footer-section .song-bar{
    text-align: center;
 }
+/* TIME-BAR */
+.song-bar{
+    justify-content: center;
+}
+.time-bar{
+    width: 50%;
+    height: 2px;
+    background-color: aliceblue;
+    margin: 0rem 3rem ;
+}
+
 
 
 /* COL RIGHT */
 .footer-right{
     justify-content: flex-end;
 }
-
-
-
 .footer-section img{
     width: 3.125rem;
     height: 3.125rem;
@@ -47,4 +67,13 @@ footer{
     align-items: center; 
     width: 100%;
 }
+/* audio-bar */
+
+.audio-bar{
+    width: 25%;
+    height: .1875rem;
+    background-color: aliceblue;
+}
+
+
 
