--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,5 @@
 @import url('main.css');
 @import url('footer.css');
 @import url('variables.css');
+@import url('animation.css');
 @import url('media-query.css');
