--- a/css/animation.css
+++ b/css/animation.css
@@ -1,23 +1,29 @@
-/* nav-line */
-.line-nav{
-    content: '';
-    display: block;
-    position: absolute;
-    background-color: var(--hover-color-main);
-    height: 1.875rem;
-    width: .1875rem;
-    top: 15%;
-    left:0;
-}
+
 
 /* first section line */
 
 .first-section .line{
-    content: '';
     position: absolute;
     bottom: 0;
     right: 30%;
     width: 3rem;
     height: 0.1rem;
+    background-color: var(--hover-color-main);
+}
+
+/* duration line and volume line */
+.time-bar .time-song, .audio-bar .audio-time{
+    position: absolute;
+    left:0%;
+    width: 25%;
+    height: 100%;
+    background-color: var(--text-color-footer);
+}
+
+/* hover time-line */
+.time-bar:hover .time-song{
+    background-color: var(--hover-color-main); 
+}
+.audio-bar:hover .audio-time{
     background-color: var(--hover-color-main);
 }
