--- a/css/variables.css
+++ b/css/variables.css
@@ -2,4 +2,6 @@
     --main-color: #141922;
     --footer-color: #282828;
     --hover-color-main: #adff2f;
+    --text-color-footer: #fff;
+    --text-color-nav: #6d6d6d;
 }
