--- a/css/animation.css
+++ b/css/animation.css
@@ -1,5 +1,4 @@
 
-
 /* first section line */
 
 .first-section .line{
@@ -11,6 +10,33 @@
     background-color: var(--hover-color-main);
 }
 
+/*text hover  */
+li:hover, .bottom-nav span:hover, .col-25 i:hover{
+    color: var(--text-color-footer);
+    cursor: pointer;
+}
+/* hover album */
+.second-section .col-album:hover .animation-album {
+        position: absolute;
+        background-color: rgba(0, 0,0, 0.5) ;
+        top: 0%;
+        left:0% ;
+        width: 100%;
+        height: 100%;
+    }
+    .col-album:hover .animation-album i{
+    position: absolute;
+    font-size: 5rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+}
+/* button scale */
+.upgrade button:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+}
 /* duration line and volume line */
 .time-bar .time-song, .audio-bar .audio-time{
     position: absolute;
