--- a/css/typo.css
+++ b/css/typo.css
@@ -11,7 +11,7 @@ body{
 }
 .col-nav small{
     font-size: 1.2rem;
-    padding-left: 0.5rem;
+  
 }
 .col-nav li, .col-nav h5{
     padding-bottom: 0.5rem;
@@ -30,14 +30,17 @@ body{
 .title-section, h5{
     color: var(--text-color-footer);
 }
+.title-section h6 {
+    color: var(--text-color-nav);
+}
 
 /* footer */
 footer{
     color: var(--text-color-footer);
 }
-.footer-left h5{
-    font-size: 0.8rem;
+.footer-left h5, .footer-left p{
+    font-size: 0.7rem;
 }
-.footer-left p{
-    font-size: 0.4rem;
+.color-grey{
+    color: var(--text-color-nav);
 }
